force-app/main/default/objects/PartnerRole__c/PartnerRole__c.object-meta.xml
<CustomObject>
    <description>to be able to capture ship-to, bill-to and payer information as mandatory partner roles</description>
    <label>Partner Role</label>
    <nameField>
        <label>Partner Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>