force-app/main/default/objects/PartnerRole__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <description>the partner roles associated to the given account</description>
    <label>Account Number</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Roles</relationshipLabel>
    <relationshipName>PartnerRoles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>