force-app/main/default/objects/PartnerRole__c/fields/PartnerAccount__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account Number</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Roles (Partner Account Number)</relationshipLabel>
    <relationshipName>PartnerAccountNumber</relationshipName>
    <type>Lookup</type>
</CustomField>