force-app/main/default/objects/PartnerRole__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RE</fullName>
                <label>Bill-to</label>
            </value>
            <value>
                <fullName>WE</fullName>
                <label>Ship-to</label>
            </value>
            <value>
                <fullName>AG</fullName>
                <label>Client</label>
            </value>
            <value>
                <fullName>RG</fullName>
                <label>Payer</label>
            </value>
            <value>
                <fullName>ZB</fullName>
                <label>Orderer</label>
            </value>
            <value>
                <fullName>ZL</fullName>
                <label>External Warehouse Keeper</label>
            </value>
            <value>
                <fullName>ZV</fullName>
                <label>Consumer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>